--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   file_picker: ^6.1.1
   dio: ^5.4.0
   audioplayers: ^5.2.1
+  oktoast: ^3.4.0
+  flutter_inset_box_shadow: ^1.0.8
 
 dev_dependencies:
   flutter_test:
